# coq

./: .gitignore  .gitlab-ci.yml  .ocamlformat-ignore  CHANGES.md  CONTRIBUTING.md  INSTALL  INSTALL.make.md  INSTALL.md  Makefile  Makefile.build  Makefile.checker  Makefile.common  Makefile.docgram  Makefile.dune  Makefile.install  azure-pipelines.yml  configure.ml  coq-core.opam  coq-stdlib.opam  coq.opam  default.nix  dune  dune-project
.github/workflows/: ci-macos.yml
boot/: coqProject_file.ml  dune  env.mli  envars.ml  envars.mli  minisys.ml
checker/: analyze.ml  check.ml  checkInductive.ml  check_stat.ml  checker.ml  dune  mod_checking.ml  reduction.ml  safe_checking.ml  safe_checking.mli  values.ml  votour.ml
clib/: cArray.ml  cArray.mli  cList.ml  cSet.ml  cSet.mli  cString.ml  cString.mli  cThread.ml  clib.mllib  diff2.mli  dune  exninfo.ml  hMap.ml  hMap.mli  hashcons.ml  hashcons.mli  hashset.ml  hashset.mli  hashval.ml  hashval.mli  int.ml  int.mli  unionfind.mli
compiler/: coqJson.ml  coqJson.mli  dune  scoqc.ml
config/: coq_config.mli  dune
coqfind/: coqfind.mli
coqpp/: coqpp_ast.mli  coqpp_lex.mll  coqpp_main.ml  coqpp_parse.mly
core/clib/: cArray.ml  cArray.mli  cEphemeron.ml  cEphemeron.mli  cList.mli  cStack.ml  cStack.mli  cThread.ml  cThread.mli  cUnix.mli  dune  dyn.ml  monad.ml  option.ml  segmenttree.ml  segmenttree.mli
core/engine/: eConstr.ml  evarutil.ml  evarutil.mli  evd.ml  evd.mli  namegen.ml  namegen.mli  nameops.ml  proofview.ml  proofview.mli  termops.ml  uState.ml  uState.mli
core/grammar/: argextend.mlp  tacextend.mlp
core/interp/: constrexpr.ml  constrextern.ml  (+15 more)
dev/: base_include  dune  top_printers.ml  top_printers.mli
dev/shim/: dune
doc/: dune
engine/: debugHook.ml  debugHook.mli  eConstr.ml  eConstr.mli  engine.mllib  evarutil.ml  evarutil.mli  evd.ml  evd.mli  logic_monad.ml  logic_monad.mli  namegen.ml  proofview.ml  proofview.mli  proofview_monad.ml  proofview_monad.mli  termops.ml  univGen.ml  univGen.mli  univNames.ml  univProblem.mli  univSubst.ml
gramlib/: grammar.ml  grammar.mli
ide/: configwin.mli  configwin_ihm.ml  coqOps.ml  coqide.ml  dune-project  ide_slave.ml  session.ml  texmacspp.ml  wg_Completion.ml  wg_MessageView.ml  wg_MessageView.mli  wg_ProofView.ml  wg_ProofView.mli
interp/: abbreviation.ml  constrexpr.ml  constrextern.ml  constrintern.ml  constrintern.mli  declare.ml  declare.mli  dumpglob.ml  genintern.ml  genintern.mli  impargs.ml  implicit_quantifiers.ml  interp.mllib  modintern.ml  notation.ml  notation.mli  notationintern.ml  notationintern.mli  redops.ml
intf/: notation_term.mli  vernacexpr.mli
kernel/: cClosure.ml  cClosure.mli  cPrimitives.ml  cPrimitives.mli  cbytegen.ml  cemitcodes.ml  clambda.ml  constr.ml  constr.mli  context.mli  cooking.ml  csymtable.ml  declarations.ml  declareops.ml  dune  entries.ml  environ.ml  environ.mli  evar.ml  evar.mli  indtypes.ml  inductive.ml  inferCumulativity.ml  mod_typing.ml  modops.ml  modops.mli  names.ml  names.mli  nativecode.ml  nativelambda.ml  nativelib.ml  nativevalues.ml  nativevalues.mli  opaqueproof.ml  opaqueproof.mli  parray.ml  reduction.ml  relevanceops.ml  safe_typing.ml  safe_typing.mli  (+12 more)
lib/: acyclicGraph.ml  acyclicGraph.mli  aux_file.ml  cErrors.ml  cErrors.mli  control.ml  control.mli  dune  envars.ml  envars.mli  feedback.ml  feedback.mli  flags.ml  flags.mli  future.ml  lib.mllib  loc.mli  pp.ml  spawn.ml
man/: dune
parsing/: cLexer.ml  cstats.ml  cstats.mli  extend.ml  g_constr.mlg  g_vernac.ml4  pcoq.ml  pcoq.mli
pretyping/: arguments_renaming.ml  cases.ml  cbv.ml  cbv.mli  coercion.ml  coercionops.ml  constr_matching.ml  detyping.ml  detyping.mli  evarconv.ml  evardefine.ml  globEnv.ml  globEnv.mli  glob_ops.ml  glob_term.ml  heads.ml  indrec.ml  inductiveops.ml  keys.ml  keys.mli  nativenorm.ml  patternops.ml  pretype_errors.ml  pretyping.ml  recordops.ml  recordops.mli  reductionops.ml  reductionops.mli  retyping.ml  structures.ml  tacred.ml  typeclasses.ml  typeclasses.mli  typing.ml  unification.ml  vnorm.ml
printing/: ppvernac.ml  prettyp.ml  proof_diffs.ml
proofs/: clenv.ml  logic.ml  pfedit.ml  pfedit.mli  proof.ml  proof.mli  proof_global.ml  proof_global.mli  refiner.ml
stm/: asyncTaskQueue.ml  asyncTaskQueue.mli  coqworkmgrApi.ml  stm.ml  stm.mli  vernac_classifier.ml  vio_checking.ml  workerPool.ml
sysinit/: coqargs.ml  coqinit.ml
tactics/: abstract.ml  autorewrite.ml  btermdn.ml  class_tactics.ml  contradiction.ml  declare.ml  declare.mli  declareScheme.ml  elimschemes.ml  elimschemes.mli  eqdecide.ml  eqschemes.ml  eqschemes.mli  equality.ml  gencoerce.ml  genredexpr.ml  hints.ml  hipattern.ml  ind_tables.ml  ind_tables.mli  inv.ml  leminv.ml  proof_global.ml  proof_global.mli  redexpr.ml  rewrite.ml  tacticals.ml  tactics.ml  term_dnet.ml
test-suite/: Makefile  curdir.ml  dune
test-suite/misc/: poly-capture-global-univs.sh
test-suite/misc/universes/: dune
test-suite/primitive/arrays/: literal.v  make.v  reroot.v  set.v
theories/: dune.disabled  dune_theory
tools/: CoqMakefile.in  cdynlink.ml  coq_dune.ml  coq_makefile.ml  coqdep.ml  coqdep_common.ml  coqdep_common.mli  coqdep_lexer.mll  dune  test_dune.ml
topbin/: coqnative_bin.ml  dune
toplevel/: ccompile.ml  ccompile.mli  coqargs.ml  coqargs.mli  coqc.ml  coqcargs.ml  coqcargs.mli  coqinit.ml  coqinit.mli  coqloop.ml  coqloop.mli  coqtop.ml  coqtop.mli  dune  topfmt.ml  toplevel.mllib  vernac.ml  vernac.mli
vernac/: assumptions.ml  attributes.ml  attributes.mli  auto_ind_decl.ml  canonical.ml  class.ml  classes.ml  classes.mli  comArguments.ml  comAssumption.ml  comAssumption.mli  comCoercion.ml  comDefinition.ml  comDefinition.mli  comFixpoint.ml  comHints.ml  comInductive.ml  comProgramFixpoint.ml  comProgramFixpoint.mli  comSearch.ml  command.ml  consoleOps.ml  debugHook.ml  declare.ml  declare.mli  declareDef.ml  declareDef.mli  declareInd.ml  declareObl.ml  declareObl.mli  declareUniv.ml  declareVar.ml  declareVar.mli  declaremods.ml  declaremods.mli  dune  egramcoq.ml  egramml.ml  egramml.mli  future.ml  (+40 more)
(+399 files in other folders)
