(install
 (section bin)
 (package coq)
 (files (coqtop_bin.exe as coqtop)))

(executable
 (name coqtop_bin)
 (public_name coqtop.opt)
 (package coq)
 (modules coqtop_bin)
 (libraries coq.toplevel))

(executable
 (name coqtop_byte_bin)
 (public_name coqtop.byte)
 (package coq)
 (modules coqtop_byte_bin)
 (modes byte)
 (libraries compiler-libs.toplevel coq.toplevel))

(executable
 (name coqc_bin)
 (public_name coqc)
 (package coq)
 (modules coqc_bin)
 (libraries coq.toplevel))

; Workers
(executables
 (names coqqueryworker_bin coqtacticworker_bin coqproofworker_bin)
 (public_names coqqueryworker.opt coqtacticworker.opt coqproofworker.opt)
 (package coq)
 (modules :standard \ coqtop_byte_bin coqtop_bin coqc_bin)
 (libraries coq.toplevel))
