(install
 (section bin)
 (package coq)
 (files (coqtop_bin.exe as coqtop)))

(executable
 (name coqtop_bin)
 (public_name coqtop.opt)
 (package coq)
 (modules coqtop_bin)
 (libraries coq.toplevel)
 (link_flags -linkall))

(executable
 (name coqtop_byte_bin)
 (public_name coqtop.byte)
 (package coq)
 (modules coqtop_byte_bin)
 (libraries compiler-libs.toplevel coq.toplevel)
 (modes byte)
 (link_flags -linkall))

(executable
 (name coqc_bin)
 (public_name coqc)
 (package coq)
 (modules coqc_bin)
 (libraries coq.toplevel)
 (link_flags -linkall))

(install
 (section bin)
 (package coq)
 (files (coqc_bin.bc as coqc.byte)))
