(library
 (name common)
 (public_name coq.common)
 (wrapped false)
 (modules topfmt vernac coqinit usage coqargs)
 (libraries num coq.stm))

(library
 (name compiler)
 (public_name coq.compiler)
 (wrapped false)
 (modules coqcargs ccompile coqc)
 (libraries coq.common))

(library
 (name toplevel)
 (public_name coq.toplevel)
 (synopsis "Coq's Interactive Shell [terminal-based]")
 (wrapped false)
 (modules g_toplevel coqloop coqtop workerLoop)
 (libraries coq.common coq.compiler))
; Coqlevel provides the `Num` library to plugins, we could also use
; -linkall in the plugins file, to be discussed.

(rule
 (targets g_toplevel.ml)
 (deps (:mlg-file g_toplevel.mlg))
 (action (run coqpp %{mlg-file})))
