(library
 (name coq_dynlink)
 (public_name coq.dynlink)
 (synopsis "Fake Dynlink Library for platforms without Native Dynlink (i.e., 32bit OSX)")
 (modules cdynlink)
 (virtual_modules cdynlink))

(library
 (name vernac)
 (synopsis "Coq's Vernacular Language")
 (public_name coq.vernac)
 (wrapped false)
 (modules :standard \ cdynlink)
 (libraries tactics parsing))

(rule
 (targets g_proofs.ml)
 (deps (:mlg-file g_proofs.mlg))
 (action (run coqpp %{mlg-file})))

(rule
 (targets g_vernac.ml)
 (deps (:mlg-file g_vernac.mlg))
 (action (run coqpp %{mlg-file})))
