(library
 (name vernac)
 (synopsis "Coq's Vernacular Language")
 (public_name coq-core.vernac)
 (modules :standard \ loadpath)
 (wrapped false)
 ; until ocaml/dune#4892 fixed
 ; (private_modules comProgramFixpoint egramcoq)
 (libraries tactics parsing loadpath))

(coq.pp (modules g_proofs g_vernac))

(library
 (name loadpath)
 (synopsis "Coq's LoadPath Library")
 (public_name coq-core.loadpath)
 (modules loadpath)
 (wrapped false)
 ; Due to libnames
 (libraries library))
